k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scouting-outing-manager
  labels:
    name: scouting-outing-manager
    app: scouting-outing-manager
